--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Đại Học Đa Năng - Tin tức</title>
+    <title>STEM</title>
     <style>
         body {
             margin: 0;
@@ -121,9 +121,9 @@
         <img class="logo" src="LOGO.png" alt="Logo Đại Học Đa Năng">
         
         <div class="banner-content">
-            <div class="main-title">ĐẠI HỌC ĐA NĂNG</div>
-            <div class="sub-title">TRUNG TÂM GIÁO DỤC QUỐC PHÒNG - AN NINH VÀ THỂ THAO</div>
-            <div class="english-title">Center of National Defense - Security Education and Sports - UTD</div>
+            <div class="main-title">STEM LIÊN MÔN</div>
+            <div class="sub-title">TRUNG TÂM TIN TỨC GIÁO DỤC QUỐC PHÒNG - AN NINH</div>
+            <div class="english-title">Center of National Defense - Security Education</div>
         </div>
     </div>
     
