--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
         
         <div class="banner-content">
             <div class="main-title">STEM GDQPAN - TIN</div>
-            <div class="sub-title">TRUNG TÂM GIÁO DỤC QUỐC PHÒNG - AN NINH VÀ THỂ THAO</div>
-            <div class="english-title">News of National Defense - Security Education and Sports</div>
+            <div class="sub-title"> BỘ MÔNMÔN GIÁO DỤC QUỐC PHÒNG - AN NINH </div>
+            <div class="english-title">Department of National Defense - Security Education </div>
         </div>
     </div>
     
