--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         
         <div class="banner-content">
             <div class="main-title">STEM GDQPAN - TIN</div>
-            <div class="sub-title"> BỘ MÔNMÔN GIÁO DỤC QUỐC PHÒNG - AN NINH </div>
+            <div class="sub-title"> BỘ MÔN GIÁO DỤC QUỐC PHÒNG - AN NINH </div>
             <div class="english-title">Department of National Defense - Security Education </div>
         </div>
     </div>
